--- a/package.json
+++ b/package.json
@@ -8,15 +8,23 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/lab": "^5.0.0-alpha.61",
+    "@mui/material": "^5.2.5",
+    "emailjs-com": "^3.2.0",
     "next": "10.2.3",
     "ngrok": "^4.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-icons": "^4.2.0",
+    "react-icons": "^4.3.1",
     "styled-components": "^5.3.0",
     "styled-normalize": "^8.0.7"
   },
   "devDependencies": {
-    "next-optimized-images": "^2.6.2"
+    "autoprefixer": "^10.4.0",
+    "next-optimized-images": "^2.6.2",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.7"
   }
 }
